// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should render with avatar 1`] = `
<View
  avatar="avatar_uri"
  disabled={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "#bbb",
        "borderBottomWidth": 1,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
      },
      Object {
        "backgroundColor": "peru",
      },
      false,
      false,
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        },
        Object {
          "backgroundColor": "peru",
        },
      ]
    }
  >
    <Avatar
      editButton={
        Object {
          "iconColor": "#fff",
          "iconName": "mode-edit",
          "iconType": "material",
          "size": null,
          "style": null,
          "underlayColor": "#000",
        }
      }
      onEditPress={null}
      rounded={false}
      showEditButton={false}
      source={
        Object {
          "uri": "avatar_uri",
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View />
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ListItem component should render with left icon 1`] = `
<View
  disabled={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "#bbb",
        "borderBottomWidth": 1,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
      },
      undefined,
      false,
      false,
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        },
        Object {
          "backgroundColor": "peru",
        },
      ]
    }
  >
    <View
      disabled={false}
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
      underlayColor="white"
    >
      <View>
        <Icon
          color="red"
          iconStyle={
            Array [
              Object {
                "marginRight": 8,
              },
              undefined,
            ]
          }
          name="wifi"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={20}
          type="font-awesome"
          underlayColor="white"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View />
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ListItem component should render with left icon component 1`] = `
<View
  disabled={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "#bbb",
        "borderBottomWidth": 1,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
      },
      undefined,
      false,
      false,
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        },
        Object {
          "backgroundColor": "peru",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      I'm left icon
    </Text>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View />
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ListItem component should render with right icon component 1`] = `
<View
  disabled={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "#bbb",
        "borderBottomWidth": 1,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
      },
      undefined,
      false,
      false,
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        },
        Object {
          "backgroundColor": "peru",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View />
      </View>
      <View>
        <View />
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      I'm right icon
    </Text>
  </View>
</View>
`;

exports[`ListItem component should render with textInput 1`] = `
<View
  disabled={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "#bbb",
        "borderBottomWidth": 1,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
      },
      undefined,
      false,
      false,
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View />
      </View>
      <View>
        <View />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "alignItems": null,
          },
          undefined,
        ]
      }
    >
      <TextInput
        editable={true}
        style={
          Array [
            Object {
              "flex": 1,
              "height": 20,
              "textAlign": "right",
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
          "marginRight": 5,
        }
      }
    >
      <Switch
        disabled={false}
        value={false}
      />
    </View>
  </View>
</View>
`;

exports[`ListItem component should render with title and subtitle 1`] = `
<View
  disabled={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "#bbb",
        "borderBottomWidth": 1,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
      },
      undefined,
      false,
      false,
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        },
        Object {
          "backgroundColor": "peru",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#43484d",
                "fontSize": 17.5,
              },
              Object {
                "marginLeft": 10,
              },
              Object {
                "backgroundColor": "peru",
              },
              Object {
                "fontFamily": "arial",
              },
            ]
          }
        >
          title test
        </TextElement>
      </View>
      <View>
        <TextElement
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#86939e",
                "fontSize": 15,
                "fontWeight": "600",
                "marginTop": 1,
              },
              Object {
                "marginLeft": 10,
              },
              Object {
                "backgroundColor": "peru",
              },
              Object {
                "fontFamily": "arial",
              },
            ]
          }
        >
          title test
        </TextElement>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <TextElement
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#bdc6cf",
              "marginRight": 5,
            },
            undefined,
          ]
        }
      >
        title
      </TextElement>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ListItem component should render without issues 1`] = `
<View
  disabled={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "#bbb",
        "borderBottomWidth": 1,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
      },
      undefined,
      false,
      false,
    ]
  }
  underlayColor="white"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginLeft": 10,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View>
        <View />
      </View>
      <View>
        <View />
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      disabled={true}
      focusedOpacity={0.7}
      style={
        Object {
          "alignItems": "flex-end",
          "justifyContent": "center",
        }
      }
    >
      <Icon
        color="#bdc6cf"
        name="chevron-right"
        raised={false}
        reverse={false}
        reverseColor="white"
        size={28}
        underlayColor="white"
      />
    </TouchableOpacity>
  </View>
</View>
`;
